# Projet5

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: app.py  model_With_Threshold.py  preprocessing.py  train.py
tests/: test_api.py
