[project]
name = "projet5"
version = "0.1.0"
description = ""
authors = [
    {name = "Apinsun",email = "arnaudpinsun@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "scikit-learn (>=1.5.0,<1.6.0)", # Version stable éprouvée
    "joblib (>=1.4.0,<2.0.0)",

    # --- LES COMPATIBILITÉS FORCÉES POUR YDATA ---
    # ydata exige Pandas < 3.0 (donc on prend la dernière 2.x)
    "pandas (>=2.2.0,<3.0.0)", 
    
    # ydata exige Numpy < 2.4
    "numpy (>=1.26.0,<2.4.0)",
    "setuptools (>=80.10.2,<81.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

[dependency-groups]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
dev = [
    "ydata-profiling (>=4.18.1,<5.0.0)",
    "matplotlib (<=3.10.0)"
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = "."
